error.log
warning: hiding a lifetime that's elided elsewhere is confusing
  --> crates\forja-llm\src\client.rs:57:24
   |
57 | ...ad(&self, messages: &[Message], stream: bool) -> ChatCompletionRequest {
   |       ^^^^^ the lifetime is elided here             ^^^^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
   = note: `#[warn(mismatched_lifetime_syntaxes)]` on by default
help: use `'_` for type paths
   |
57 |     fn prepare_payload(&self, messages: &[Message], stream: bool) -> ChatCompletionRequest<'_> {
   |                                                                                           ++++

warning: `forja-llm` (lib) generated 1 warning (run `cargo fix --lib -p forja-llm` to apply 1 suggestion)
    Checking forja v0.1.0 (F:\1.Project\forja)
error[E0271]: expected `impl Future<Output = Result<(), Error>>` to be a future that resolves to `()`, but it resolves to `Result<(), Error>`
   --> src\main.rs:57:16
    |
 57 |     engine.run(tokio::signal::ctrl_c()).await?;
    |            --- ^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Error>`
    |            |
    |            required by a bound introduced by this call
    |
    = note: expected unit type `()`
                    found enum `Result<(), std::io::Error>`
note: required by a bound in `Engine::run`
   --> F:\1.Project\forja\crates\forja-core\src\engine.rs:120:32
    |
118 |     pub async fn run<F>(&mut self, shutdown: F) -> Result<()>
    |                  --- required by a bound in this associated function
119 |     where
120 |         F: std::future::Future<Output = ()> + Send,
    |                                ^^^^^^^^^^^ required by this bound in `Engine::run`

error[E0271]: expected `impl Future<Output = Result<(), Error>>` to be a future that resolves to `()`, but it resolves to `Result<(), Error>`
   --> src\main.rs:57:5
    |
 57 |     engine.run(tokio::signal::ctrl_c()).await?;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Error>`
    |
    = note: expected unit type `()`
                    found enum `Result<(), std::io::Error>`
note: required by a bound in `Engine::run`
   --> F:\1.Project\forja\crates\forja-core\src\engine.rs:120:32
    |
118 |     pub async fn run<F>(&mut self, shutdown: F) -> Result<()>
    |                  --- required by a bound in this associated function
119 |     where
120 |         F: std::future::Future<Output = ()> + Send,
    |                                ^^^^^^^^^^^ required by this bound in `Engine::run`

error[E0271]: expected `impl Future<Output = Result<(), Error>>` to be a future that resolves to `()`, but it resolves to `Result<(), Error>`
   --> src\main.rs:57:41
    |
 57 |     engine.run(tokio::signal::ctrl_c()).await?;
    |                                         ^^^^^ expected `()`, found `Result<(), Error>`
    |
    = note: expected unit type `()`
                    found enum `Result<(), std::io::Error>`
note: required by a bound in `Engine::run`
   --> F:\1.Project\forja\crates\forja-core\src\engine.rs:120:32
    |
118 |     pub async fn run<F>(&mut self, shutdown: F) -> Result<()>
    |                  --- required by a bound in this associated function
119 |     where
120 |         F: std::future::Future<Output = ()> + Send,
    |                                ^^^^^^^^^^^ required by this bound in `Engine::run`

For more information about this error, try `rustc --explain E0271`.
error: could not compile `forja` (bin "forja") due to 3 previous errors
